fix the overflow scrolling problem

--- a/src/css/about.module.scss
+++ b/src/css/about.module.scss
@@ -157,6 +157,7 @@ $COLOR_VIEW_WORKS_BUTTON: #282D2F;
           @include sm(){
             padding-top: 0;
             margin-top: -8vh;
+            overflow-x: hidden;
           }
   
           .about_self_intro_circle_container{
@@ -169,6 +170,7 @@ $COLOR_VIEW_WORKS_BUTTON: #282D2F;
             @include sm(){
               position: relative;
               left: 25%;
+              overflow-x: hidden !important;
             }
   
             .about_self_intro_circle_prop{
@@ -279,6 +281,7 @@ $COLOR_VIEW_WORKS_BUTTON: #282D2F;
     background: $ABOUT_BG_COLOR_4;
     @include sm(){
       height: 30vh;
+      padding-top: 10vh;
     }
     
     .about_special_contents_prop_container{
