--- a/src/css/footer.module.scss
+++ b/src/css/footer.module.scss
@@ -16,6 +16,9 @@ $COLOR_BOTTOM_TEXT: #858A8B;
   background-size: cover;
   z-index: 100 !important;
   margin-top: -35vh;
+  @include sm(){
+    overflow-x: hidden;
+  }
 
   .upper_section_container{
     padding-top: 7.85rem;
@@ -28,6 +31,7 @@ $COLOR_BOTTOM_TEXT: #858A8B;
       width: 100%;
       padding-left: 20vw;
       justify-content: flex-start;
+      overflow-x: hidden;
     }
 
     .upper_left_container{
@@ -55,6 +59,7 @@ $COLOR_BOTTOM_TEXT: #858A8B;
       flex-direction: column;
       margin-top: 2rem;
       width: 30%;
+      overflow-x: hidden;
 
       .upper_right_contents_prop{
         font-size: 1.2rem;
